--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
    
 </div>
 
-
+<div id="petsCard"></div>
 
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -30,6 +30,9 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
   crossorigin="anonymous"></script>
 
+  <script src="./javascripts/components/petComponent.js" type="module"></script>
+  <script src="./javascripts/data/petData.js" type="module"></script>
+  <script src="./javascripts/events.js" type="module"></script>
   <script src="./javascripts/main.js" type="module"></script>
 </body>
 </html>
