--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 <h1 class="m-3 display-4 text-center"> Adoption of Pets</h1>
 
 <div class="text-center">
-    <button class="btn btn-outline-secondary m-3" id="ClearFilter">Clear Filter</button>
-    <button class="btn btn-success m-3" id="ClearFilter">Dogs</button>
-    <button class="btn btn-info m-3" id="ClearFilter">Cats</button>
-    <button class="btn btn-warning m-3" id="ClearFilter">Dinos</button>
+    <button class="btn btn-outline-secondary m-3" id="all">Clear Filter</button>
+    <button class="btn btn-success m-3" id="dog">Dogs</button>
+    <button class="btn btn-info m-3" id="cat">Cats</button>
+    <button class="btn btn-warning m-3" id="dino">Dinos</button>
    
 </div>
 
